<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:preference="http://schemas.android.com/apk/res-auto" >

    <Preference
        preference:icon="@drawable/ic_settings_add"
        preference:key="add_account"
        preference:title="@string/add_account" >
    </Preference>
    <Preference
        preference:icon="@drawable/ic_settings_location"
        preference:key="language"
        preference:title="@string/system_location" >
    </Preference>
    <Preference
        preference:icon="@drawable/ic_settings_security"
        preference:key="keyboard"
        preference:title="@string/system_security" >
    </Preference>
    <Preference
        preference:icon="@drawable/ic_settings_diagnostic"
        preference:key="usageAndDiag"
        preference:title="@string/system_diagnostic" >
    </Preference>

</PreferenceScreen>
